src/components/pages/AboutMe.css
@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');

body{
    background-color:rgb(131, 170, 185);
    padding: 0;
	margin: 0;
	scroll-behavior: smooth;
}
.gridContainer{
	display:grid;
	row-gap:2vh;
	padding-bottom:20px;
}

.aboutMe{
    display: flex;
    flex-direction: column;
	align-items: center;
	padding-top: 20px;
	padding-bottom: 20px;
}

.aboutMe > p, h4, strong{
    font-family: 'Permanent Marker', cursive;
}

.gridWrapper{
	display: grid;
	padding-bottom: 50px;
    padding-top: 50px;
    width: 50%;
    margin: auto;
    border: 3px solid #333333;
    border-radius: 2% 6% 5% 4% / 1% 1% 2% 4%;
    position: relative;
}
.gridWrapper::before {
        content: '';
        border: 2px solid #353535;
        display: block;
        width: 100%;
        height: 100%;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate3d(-50%, -50%, 0) scale(1.015) rotate(0.5deg);
        border-radius: 1% 1% 2% 4% / 2% 6% 5% 4%;
}

.subtitle{
	display: flex;
	justify-content: center;
    align-items: center;
    margin-bottom: 5px;
}

.skills, .technologies, .education {
    display: flex;
    justify-content: space-evenly;
}

.frontEndSkills{
	display: flex;
	flex-grow:1;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin:0;
	padding: 0;
}
.backEndSkills{
	display: flex;
	flex-grow:0.8;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin:0;
	padding: 0;
	border-left: solid 1px black;
}

@media screen and (max-width: 960px) {
    .gridWrapper, .gridWrapper{
        width: 80%;
    }
    .aboutMe{
        width: 90%;
        margin:auto;
    }
}

